# spar

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  COMPLIANCE.md  Cargo.toml  LICENSE  README.md  architecture.yaml  deny.toml  rivet.yaml
crates/spar-analysis/: Cargo.toml  spar-analysis.cdx.json
crates/spar-analysis/src/: arinc653.rs  binding_check.rs  binding_rules.rs  bus_bandwidth.rs  category_check.rs  classifier_match.rs  completeness.rs  connection_rules.rs  connectivity.rs  direction_rules.rs  emv2_analysis.rs  emv2_propagation.rs  emv2_stpa_bridge.rs  extends_rules.rs  feature_group_check.rs  flow_check.rs  flow_rules.rs  hierarchy.rs  latency.rs  legality.rs  lib.rs  memory_budget.rs  modal.rs  modal_rules.rs  mode_check.rs  mode_reachability.rs  mode_rules.rs  naming_rules.rs  property_accessors.rs  property_rules.rs  regression_tests.rs  resource_budget.rs  rta.rs  scheduling.rs  scheduling_verified.rs  subcomponent_rules.rs  tests.rs  wctt.rs  weight_power.rs  wrpc_binding.rs
crates/spar-analysis/src/ai_ml/: mod.rs  tests.rs
crates/spar-analysis/tests/: golden_tests.rs  rta_fixtures.rs  tsn_integration.rs  wctt_fixtures.rs
crates/spar-analysis/tests/fixtures/rta/: irq_brake_handler.aadl  irq_brake_handler.expected.json  jittered_chain.aadl  jittered_chain.expected.json  multi_isr_same_cpu.aadl  (+1 more)
crates/spar-annex/: Cargo.toml  spar-annex.cdx.json
crates/spar-annex/src/: lib.rs  registry.rs  types.rs
crates/spar-annex/src/ba/: grammar.rs  lexer.rs  mod.rs  parser.rs  syntax_kind.rs
crates/spar-annex/src/emv2/: grammar.rs  lexer.rs  mod.rs  parser.rs  syntax_kind.rs
crates/spar-annex/tests/: emv2_integration.rs
crates/spar-base-db/: Cargo.toml  spar-base-db.cdx.json
crates/spar-base-db/src/: lib.rs
crates/spar-cli/: Cargo.toml  spar.cdx.json
crates/spar-cli/src/: assertion.rs  diff.rs  insight.rs  lib.rs  lsp.rs  main.rs  moves.rs  refactor.rs  sarif.rs  variants_bridge.rs  verify.rs
crates/spar-cli/src/assertion/: eval.rs  lexer.rs  mod.rs  parser.rs  syntax.rs
crates/spar-cli/tests/: applies_to_feature_path.rs  applies_to_nested.rs  emit_mermaid.rs  fuzz_pipeline.rs  help_flag.rs  moves_enumerate.rs  moves_enumerate_objectives.rs  moves_variant.rs  moves_verify.rs  parse_error_line_col.rs  roundtrip.rs  sysml2_cli.rs  test_data_parse_roundtrip.rs  track_a_close_out.rs
crates/spar-codegen/: Cargo.toml
crates/spar-codegen/benches/: codegen_benchmarks.rs
crates/spar-codegen/src/: config_gen.rs  doc_gen.rs  lib.rs  proof_gen.rs  rust_gen.rs  test_gen.rs  wit_gen.rs  workspace_gen.rs
crates/spar-codegen/tests/: golden_test.rs  kani_codegen.rs  kani_contracts.rs
crates/spar-hir/: Cargo.toml  spar-hir.cdx.json
crates/spar-hir-def/: Cargo.toml  spar-hir-def.cdx.json
crates/spar-hir-def/src/: category_rules.rs  feature_group.rs  instance.rs  lib.rs  migration.rs  name.rs  overlay.rs  properties.rs  property_check.rs  property_eval.rs  property_value.rs  prototype.rs  resolver.rs  standard_properties.rs
crates/spar-hir-def/src/item_tree/: lower.rs  mod.rs
crates/spar-hir/src/: lib.rs
crates/spar-insight/: Cargo.toml
crates/spar-insight/src/: ctf.rs  discrepancy.rs  lib.rs  report.rs  timing.rs  zephyr_events.rs
crates/spar-insight/tests/: integration_tests.rs
crates/spar-mcp/: Cargo.toml
crates/spar-mcp/src/: lib.rs  schema.rs  server.rs
crates/spar-mcp/src/tools/: check_chain.rs  enumerate.rs  mod.rs  verify.rs
crates/spar-mcp/tests/: in_process_tests.rs  stdio_tests.rs
crates/spar-mermaid/: Cargo.toml
crates/spar-mermaid/src/: lib.rs
crates/spar-network/: Cargo.toml
crates/spar-network/src/: curves.rs  extract.rs  lib.rs  pmoo.rs  tsn.rs  types.rs
crates/spar-network/tests/: extract_tests.rs
crates/spar-parser/: Cargo.toml  spar-parser.cdx.json
crates/spar-parser/src/: event.rs  lexer.rs  lib.rs  marker.rs  parser.rs  syntax_kind.rs  token_set.rs
crates/spar-parser/src/grammar/: annexes.rs  components.rs  connections.rs  features.rs  flows.rs  mod.rs  modes.rs  packages.rs  properties.rs
crates/spar-parser/tests/: proptest_parser.proptest-regressions  proptest_parser.rs
crates/spar-render/: Cargo.toml  spar-render.cdx.json
crates/spar-render/src/: lib.rs
crates/spar-solver/: Cargo.toml  spar-solver.cdx.json
crates/spar-solver/benches/: solver_benchmarks.rs
crates/spar-solver/src/: allocate.rs  constraints.rs  enumerate.rs  lib.rs  milp.rs  nsga2.rs  tests.rs  topology.rs
crates/spar-solver/tests/: kani_solver.rs
crates/spar-syntax/: Cargo.toml  spar-syntax.cdx.json
crates/spar-syntax/src/: language.rs  lib.rs  parsing.rs
crates/spar-syntax/src/ast/: mod.rs
crates/spar-syntax/tests/: fuzz_aadl.rs  parser_tests.rs
crates/spar-sysml2/: Cargo.toml
crates/spar-sysml2/src/: event.rs  extract.rs  generate.rs  language.rs  lexer.rs  lib.rs  lower.rs  marker.rs  parser.rs  stdlib.rs  syntax_kind.rs  token_set.rs  tree_builder.rs
crates/spar-sysml2/src/grammar/: constraints.rs  mod.rs  packages.rs  parts.rs  requirements.rs
crates/spar-sysml2/tests/: conformance_tests.rs  fuzz_sysml2.rs  validation_tests.rs
crates/spar-trace-topology/: Cargo.toml
crates/spar-trace-topology/src/: identity.rs  ingest.rs  lib.rs  reconcile.rs  report.rs
crates/spar-trace-topology/src/fixtures/: mod.rs  netns.rs  transform.rs
crates/spar-trace-topology/tests/: identity_accessors.rs
crates/spar-transform/: Cargo.toml  spar-transform.cdx.json
crates/spar-transform/src/: cargo_metadata.rs  lib.rs  protocol_library.rs  rust_crate.rs  wac.rs  wac_parser.rs  wit.rs  wit_parser.rs  wrpc.rs
crates/spar-variants/: Cargo.toml
crates/spar-variants/src/: binding.rs  context.rs  filter.rs  lib.rs
crates/spar-verify-macros/: Cargo.toml
crates/spar-verify-macros/src/: lib.rs
crates/spar-wasm/: Cargo.toml  spar-wasm.cdx.json
crates/spar-wasm/src/: graph.rs  lib.rs  render.rs
crates/spar-wasm/tests/: integration.rs
crates/spar-wasm/wit/: adapter.wit
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_aadl_parse.rs  fuzz_codegen_roundtrip.rs  fuzz_scheduler_solver.rs
(+319 files in other folders)
