[workspace]
resolver = "2"
members = [
    "crates/spar-parser",
    "crates/spar-syntax",
    "crates/spar-annex",
    "crates/spar-base-db",
    "crates/spar-hir-def",
    "crates/spar-hir",
    "crates/spar-analysis",
    "crates/spar-transform",
    "crates/spar-cli",
    "crates/spar-render",
    "crates/spar-wasm",
    "crates/spar-solver",
]

[workspace.package]
version = "0.2.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/pulseengine/spar"

[workspace.dependencies]
spar-parser = { path = "crates/spar-parser" }
spar-syntax = { path = "crates/spar-syntax" }
spar-annex = { path = "crates/spar-annex" }
spar-base-db = { path = "crates/spar-base-db" }
spar-hir-def = { path = "crates/spar-hir-def" }
spar-hir = { path = "crates/spar-hir" }
spar-analysis = { path = "crates/spar-analysis" }
spar-render = { path = "crates/spar-render" }
spar-transform = { path = "crates/spar-transform" }
spar-solver = { path = "crates/spar-solver" }
rowan = "0.16"
salsa = "0.26"
la-arena = "0.3"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
smol_str = "0.3"
petgraph = "0.7"
etch = { git = "https://github.com/pulseengine/rivet.git", rev = "d80b36b", package = "etch" }
