[workspace]
resolver = "2"
members = [
    "crates/spar-parser",
    "crates/spar-syntax",
    "crates/spar-annex",
    "crates/spar-base-db",
    "crates/spar-hir-def",
    "crates/spar-hir",
    "crates/spar-analysis",
    "crates/spar-transform",
    "crates/spar-cli",
    "crates/spar-codegen",
    "crates/spar-render",
    "crates/spar-solver",
    "crates/spar-sysml2",
    "crates/spar-verify-macros",
    "crates/spar-verify",
    "crates/spar-wasm",
]

[workspace.package]
version = "0.6.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/pulseengine/spar"

[workspace.dependencies]
spar-parser = { path = "crates/spar-parser" }
spar-syntax = { path = "crates/spar-syntax" }
spar-annex = { path = "crates/spar-annex" }
spar-base-db = { path = "crates/spar-base-db" }
spar-hir-def = { path = "crates/spar-hir-def" }
spar-hir = { path = "crates/spar-hir" }
spar-analysis = { path = "crates/spar-analysis" }
spar-render = { path = "crates/spar-render" }
spar-solver = { path = "crates/spar-solver" }
spar-sysml2 = { path = "crates/spar-sysml2" }
spar-transform = { path = "crates/spar-transform" }
spar-codegen = { path = "crates/spar-codegen" }
rowan = "0.16"
salsa = "0.26"
la-arena = "0.3"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
smol_str = "0.3"
petgraph = "0.7"
etch = { git = "https://github.com/pulseengine/rivet.git", rev = "4c067093ac34fc9e32227bc5bc853d47e9220540", package = "etch" }
spar-verify-macros = { path = "crates/spar-verify-macros" }
spar-verify = { path = "crates/spar-verify" }
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
proptest = "1"
good_lp = { version = "1", default-features = false, features = ["highs"] }
criterion = { version = "0.5", features = ["html_reports"] }
