[package]
name = "spar"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AADL toolchain CLI"

[[bin]]
name = "spar"
path = "src/main.rs"

[dependencies]
spar-parser.workspace = true
spar-syntax.workspace = true
spar-base-db.workspace = true
spar-hir-def.workspace = true
spar-hir.workspace = true
spar-annex.workspace = true
spar-analysis.workspace = true
spar-sysml2.workspace = true
spar-solver.workspace = true
spar-render.workspace = true
spar-codegen.workspace = true
spar-variants.workspace = true
etch.workspace = true
la-arena.workspace = true
rowan.workspace = true
salsa.workspace = true
serde.workspace = true
lsp-server = "0.7"
lsp-types = "0.97"
serde_json = "1"
toml.workspace = true

[dev-dependencies]
rustc-hash = "2"
proptest.workspace = true
