[package]
name = "spar-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Code generation from AADL instance models (Rust, WIT, Lean4, Kani, Bazel)"

[dependencies]
spar-hir-def.workspace = true
spar-analysis.workspace = true
la-arena.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
spar-hir-def.workspace = true
spar-base-db.workspace = true
la-arena.workspace = true
criterion.workspace = true

[[bench]]
name = "codegen_benchmarks"
harness = false

# Kani-only dev-dependencies. `kani` is the verifier's own crate; it is
# provided by the `cargo kani` driver and only resolvable under the `kani`
# cfg. The `target.'cfg(kani)'` gate keeps normal `cargo test` from trying
# to pull it from crates.io.
[target.'cfg(kani)'.dev-dependencies]
# `kani` is injected by cargo-kani; no version pin needed.

[features]
# Enable the AADL-contract Kani harnesses in tests/kani_contracts.rs.
# Under `cargo kani --tests`, the harnesses are compiled via the `#[cfg(kani)]`
# cfg-guard (injected by the cargo-kani driver).  This feature flag is a
# no-op at runtime; it exists so `cargo build -p spar-codegen --features
# kani-harnesses` can verify the harness module compiles under a normal
# Rust toolchain without requiring the Kani driver.
kani-harnesses = []

[lints.rust]
# Permit the `#[cfg(kani)]` gates used by `tests/kani_codegen.rs` and
# `tests/kani_contracts.rs`.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
