[package]
name = "spar-hir-def"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HIR definitions and name resolution for AADL analysis"

[dependencies]
spar-syntax.workspace = true
spar-base-db.workspace = true
salsa.workspace = true
rowan.workspace = true
la-arena = "0.3"
rustc-hash = "2"
smol_str = "0.3"
