[package]
name = "spar-insight"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Statistical-discrepancy assistant: compares observed CTF timing traces to spar's Expected_BCET/WCET/Mean model predictions"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
spar-hir-def.workspace = true

[dev-dependencies]
pretty_assertions = "1"
spar-syntax.workspace = true
spar-base-db.workspace = true
