[package]
name = "spar-mermaid"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mermaid diagram emission for spar AADL instance models"

[dependencies]
spar-hir-def.workspace = true

[dev-dependencies]
la-arena.workspace = true
rustc-hash.workspace = true
