[package]
name = "spar-network"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Network Calculus primitives for AADL WCTT analysis (TSN/Ethernet, Track D)"

[dependencies]
spar-hir-def.workspace = true
good_lp.workspace = true

[dev-dependencies]
spar-base-db.workspace = true
