[package]
name = "spar-render"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SVG architecture visualization for AADL models"

[dependencies]
spar-hir-def = { workspace = true }
etch = { workspace = true }
petgraph = { workspace = true }

[dev-dependencies]
spar-hir-def = { workspace = true }
la-arena = { workspace = true }
rustc-hash = { workspace = true }
