[package]
name = "spar-solver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Deployment solver for AADL models"

[dependencies]
spar-hir-def.workspace = true
spar-analysis.workspace = true
petgraph.workspace = true
la-arena.workspace = true
rustc-hash = "2"
serde.workspace = true
good_lp.workspace = true
