[package]
name = "spar-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AADL syntax tree — lossless CST with typed AST layer"

[dependencies]
spar-parser.workspace = true
rowan.workspace = true

[dev-dependencies]
expect-test = "1"
