[package]
name = "spar-transform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Bidirectional transforms between AADL and external formats (WIT, etc.)"

[dependencies]
spar-hir-def.workspace = true
la-arena = "0.3"
smol_str = "0.3"
serde.workspace = true
serde_json = "1"

[dev-dependencies]
