[package]
name = "spar-variants"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Consumer-side adapter for rivet's variant context blob (v1) — filters spar HIR by binding rules"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
spar-hir-def.workspace = true

[dev-dependencies]
pretty_assertions = "1"
