[package]
name = "spar-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM component for AADL parsing, analysis, and SVG rendering"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
spar-parser.workspace = true
spar-syntax.workspace = true
spar-base-db.workspace = true
spar-hir-def.workspace = true
spar-hir.workspace = true
spar-analysis.workspace = true
spar-render.workspace = true
etch.workspace = true
serde.workspace = true
serde_json = "1"
petgraph = "0.6"
la-arena = "0.3"
wit-bindgen = { version = "0.53", default-features = false, features = ["macros", "realloc"] }

[dev-dependencies]
rustc-hash.workspace = true
